# lem_in

./: CMakeLists.txt  Makefile  author  tette
includes/: lem_in.h  libft.h
libft/: Makefile
libft/src/: check_number.c  cnt_char.c  ft_arraydel.c  ft_count_char.c  ft_len2.c  ft_len3.c  ft_strlen.c  ft_strlen2.c  ft_strnew.c  ft_strsplit.c  g_memalloc.c  get_next_line.c
map2/: Den.map  err_no_end.map
mapg/: 4k  clap.map
maps/: 1k  42  42pathes  long_hardmap  no_possible_solution.map  test.map  test2.map  test3.map  test4.map
src/: adj_list.c  deep_valid.c  dijkstra_shortest_path_.c  dislinker.c  edge_list.c  free_lem.c  ft_newlst.c  ft_rec.c  ft_triplefree.c  groups.c  intersection_handling.c  lem_in.c  link_make.c  path.c  queue.c  rec_tools.c  recursive_pathfinder.c  run_ants.c  split_free.c  switch_links.c  triple_split.c  utils.c
tests/: test1.txt
vizu/: Makefile  vizu.c
vizu/vizulib/: Makefile  adj_list.c  bresenham.c  circle.c  dijkstra_shortest_path_.c  free_lem.c  ft_newlst.c  ft_newmlx.c  ft_rec.c  ft_triplefree.c  give_color.c  groups.c  input.c  intersection_handling.c  key_press.c  link_make.c  mappaint.c  mappaint_tools.c  mouse_move.c  mouse_press.c  mouse_release.c  path.c  queue.c  rec_tools.c  recursive_pathfinder.c  run_ants.c  run_window.c  split_free.c  switch_links.c  triple_split.c  utils.c  vizulib.h
vizu/vizulib/libft/: Makefile  check_number.c  cnt_char.c  ft_arraydel.c  ft_atoi.c  ft_count_char.c  ft_err.c  ft_len2.c  ft_strlenc.c  ft_strsplit.c  get_next_line.c  libft.h
